# game-of-life

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/game_of_life/: grid.py  node.py  run.py
