[tool.poetry]
name = "game-of-life"
version = "0.1.0"
description = "Game of Life by John Conway"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
autoflake = "^2.2.1"
isort = "^5.13.2"
black = "^24.2.0"
mypy = "^1.8.0"
pylint = "^3.0.3"
pytest = "^8.0.0"
coverage = "^7.4.1"
pre-commit = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
